// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Navbar Con Dropdown 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <nav
        className="navbar navbar-expand-lg"
      >
        <a
          className="navbar-brand"
        />
        <button
          aria-label="Toggle navigation"
          className="custom-navbar-toggler navbar-toggler"
          onClick={[Function]}
          type="button"
        >
          <span
            className="it-list"
          />
        </button>
        <div
          className="collapse navbar-collapsable"
          style={Object {}}
        >
          <ul
            className="mt-0 navbar-nav"
          >
            <li
              className="nav-item active"
            >
              <a
                className="nav-link active"
                href="#"
                onClick={[Function]}
              >
                link 1 active
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link disabled"
                disabled={true}
                href="#"
                onClick={[Function]}
              >
                link 2 disabilitato
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link"
                href="#"
                onClick={[Function]}
              >
                link 3
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link"
                href="#"
                onClick={[Function]}
              >
                link 4
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link"
                href="#"
                onClick={[Function]}
              >
                link 5
              </a>
            </li>
            <li
              className="dropdown nav-item"
              onKeyDown={[Function]}
            >
              <a
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle nav-link"
                href="#"
                onClick={[Function]}
              >
                Dropdown item
              </a>
              <div
                aria-hidden={true}
                className="dropdown-menu"
                role="menu"
                tabIndex="-1"
              >
                <div
                  className="link-list-wrapper"
                >
                  <ul
                    className="link-list"
                  >
                    <li>
                      <h3
                        className="header list-item"
                      >
                        Header
                      </h3>
                    </li>
                    <li>
                      <a
                        className="list-item"
                      >
                        <span>
                          Link list 1
                        </span>
                      </a>
                    </li>
                    <li>
                      <a
                        className="list-item"
                      >
                        <span>
                          Link list 2
                        </span>
                      </a>
                    </li>
                    <li>
                      <a
                        className="list-item"
                      >
                        <span>
                          Link list 3
                        </span>
                      </a>
                    </li>
                    <li>
                      <span
                        className="divider list-item"
                      />
                    </li>
                    <li>
                      <a
                        className="list-item"
                      >
                        <span>
                          Link list 4
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </nav>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Navbar Con Megamenu (in progress) 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <nav
        className="megamenu navbar navbar-expand-lg"
      >
        <a
          className="navbar-brand"
        />
        <button
          aria-label="Toggle navigation"
          className="custom-navbar-toggler navbar-toggler"
          onClick={[Function]}
          type="button"
        >
          <span
            className="it-list"
          />
        </button>
        <div
          className="collapse navbar-collapsable"
          style={Object {}}
        >
          <ul
            className="mt-0 navbar-nav"
          >
            <li
              className="nav-item active"
            >
              <div
                className="dropdown nav-item"
                onKeyDown={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  Megamenu 1
                </a>
                <div
                  aria-hidden={true}
                  className="dropdown-menu"
                  role="menu"
                  tabIndex="-1"
                >
                  <div
                    className="link-list-wrapper"
                  >
                    <ul
                      className="link-list"
                    >
                      <li>
                        <h3
                          className="header list-item"
                        >
                          Header
                        </h3>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="nav-item"
            >
              <div
                className="dropdown nav-item"
                onKeyDown={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  Megamenu 2
                </a>
                <div
                  aria-hidden={true}
                  className="dropdown-menu"
                  role="menu"
                  tabIndex="-1"
                >
                  <div
                    className="link-list-wrapper"
                  >
                    <ul
                      className="link-list"
                    >
                      <li>
                        <h3
                          className="header list-item"
                        >
                          Header
                        </h3>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </li>
            <li
              className="nav-item"
            >
              <div
                className="dropdown nav-item"
                onKeyDown={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  Megamenu 3
                </a>
                <div
                  aria-hidden={true}
                  className="dropdown-menu"
                  role="menu"
                  tabIndex="-1"
                >
                  <div
                    className="link-list-wrapper"
                  >
                    <ul
                      className="link-list"
                    >
                      <li>
                        <h3
                          className="header list-item"
                        >
                          Header
                        </h3>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </nav>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Navbar Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <nav
        className="navbar navbar-expand-lg"
      >
        <a
          className="navbar-brand"
        />
        <button
          aria-label="Toggle navigation"
          className="custom-navbar-toggler navbar-toggler"
          onClick={[Function]}
          type="button"
        >
          <span
            className="it-list"
          />
        </button>
        <div
          className="collapse navbar-collapsable"
          style={Object {}}
        >
          <ul
            className="mt-0 navbar-nav"
          >
            <li
              className="nav-item active"
            >
              <a
                className="nav-link active"
                href="#"
                onClick={[Function]}
              >
                link 1 active
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link disabled"
                disabled={true}
                href="#"
                onClick={[Function]}
              >
                link 2 disabilitato
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link"
                href="#"
                onClick={[Function]}
              >
                link 3
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link"
                href="#"
                onClick={[Function]}
              >
                link 4
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link"
                href="#"
                onClick={[Function]}
              >
                link 5
              </a>
            </li>
            <li
              className="nav-item"
            >
              <a
                className="nav-link"
                href="#"
                onClick={[Function]}
              >
                link 6
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Navbar Esempi interattivi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="bg- navbar navbar-expand-lg navbar-light"
      style={
        Object {
          "backgroundColor": "#e3f2fd",
        }
      }
    >
      <a
        className="navbar-brand"
        href="#"
      >
        Brand
      </a>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Navbar Inline Menù 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="inline-menu"
    >
      <div
        className="link-list-wrapper"
      >
        <ul
          className="link-list"
        >
          <li>
            <a
              className="right-icon size list-item"
              onClick={[Function]}
            >
              <span>
                Link list 1 
              </span>
              <svg
                className="icon right"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                />
              </svg>
            </a>
          </li>
          <div
            className="collapse"
            style={Object {}}
          >
            <ul
              className="link-sublist"
            >
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 4 
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 5 
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 6 
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <li>
            <a
              className="right-icon size list-item"
              onClick={[Function]}
            >
              <span>
                Link list 2 
              </span>
              <svg
                className="icon right"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                />
              </svg>
            </a>
          </li>
          <div
            className="collapse"
            style={Object {}}
          >
            <ul
              className="link-sublist"
            >
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 7 
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 8 
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 9 
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <li>
            <a
              className="right-icon size list-item"
              onClick={[Function]}
            >
              <span>
                Link list 3 
              </span>
              <svg
                className="icon right"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                />
              </svg>
            </a>
          </li>
          <div
            className="collapse"
            style={Object {}}
          >
            <ul
              className="link-sublist"
            >
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 10 
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 11 
                  </span>
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                >
                  <span>
                    Link list 12 
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </ul>
      </div>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
